Criação das telas de login, cadastro e home

--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -14,7 +14,9 @@
 .text-right{text-align: right;}
 .bg-white{background: white !important; color: #111;}
 .rounded-7{border-radius: 10px !important;}
-
+.btn-light{
+  padding-top: 14px;
+}
 .btn {
   box-shadow: none !important;
   outline: none !important;
