--- a/src/components/cardRequests/style.scss
+++ b/src/components/cardRequests/style.scss
@@ -32,6 +32,9 @@
     }
     .guardar{
       color: #D8E9A8;
+      padding: 0px !important;
+      background: none;
+      border: none;
       font-size: 30px;
     }
   }
